# src/app/externalOrders/orders.dto.ts
@@ -1,0 +1,29 @@
+import { Governorate, OrderStatus } from "@prisma/client";
+import { z } from "zod";
+
+export const OrderCreateSchema = z.object({
+  receiptNumber: z.string().optional(),
+  clientName: z
+    .string()
+    .min(5, { message: "يجب إدخال اسم العميل اكثر من 5 حروف" }),
+  storeName: z
+    .string()
+    .min(4, { message: "يجب إدخال اسم المتجر اكثر من 4 حروف" }),
+  clientPhone: z
+    .string()
+    .min(11, { message: "يجب إدخال رقم هاتف العميل من 11 رقم" }),
+  recipientName: z.string().optional().default("غير معرف"),
+  confirmed: z.coerce.boolean().optional(),
+  status: z.nativeEnum(OrderStatus).default(OrderStatus.REGISTERED),
+  recipientPhones: z.array(z.string().min(6)).optional(),
+  recipientPhone: z.string().min(6).optional(),
+  recipientAddress: z.string(),
+  details: z.string().optional(),
+  notes: z.string().optional(),
+  governorate: z.nativeEnum(Governorate),
+  locationID: z.coerce.number(),
+  totalCost: z.number(),
+  quantity: z.number().default(1),
+});
+
+export type OrderCreateType = z.infer<typeof OrderCreateSchema>;
